--- a/quantlib/Dockerfile
+++ b/quantlib/Dockerfile
@@ -1,4 +1,4 @@
-FROM lballabio/boost:wily
+FROM lballabio/boost:precise
 MAINTAINER Luigi Ballabio <luigi.ballabio@gmail.com>
 LABEL Description="A building environment where the QuantLib C++ library is available"
 
