--- a/testbox/Dockerfile
+++ b/testbox/Dockerfile
@@ -1,4 +1,4 @@
-FROM lballabio/boost:wily
+FROM lballabio/boost:precise
 MAINTAINER Luigi Ballabio <luigi.ballabio@gmail.com>
 LABEL Description="A testing environment for building QuantLib and its SWIG bindings"
 
