Install seaborn module on Vivid.

--- a/quantlib-notebook/Dockerfile
+++ b/quantlib-notebook/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Luigi Ballabio <luigi.ballabio@gmail.com>
 LABEL Description="An IPython notebook server with the QuantLib Python module available"
 
 RUN apt-get update && \
-    apt-get install -y ipython-notebook python-matplotlib python-pandas
+    apt-get install -y ipython-notebook python-matplotlib python-pandas python-seaborn
 
 EXPOSE 8888
 
